# feb_blog

./: .gitignore  README.md  pyproject.toml
app/: settings.py
django/blog/: models.py
django/blog/migrations/: 0001_initial.py
django/main/: settings.py  urls.py
fastapi/: docker-compose.yml  pyproject.toml
fastapi/app/: main.py
fastapi/app/api/routes/: api.py
