[tool.poetry]
name = "feb-blog-backend"
version = "0.1.0"
description = ""
authors = ["d29107d <d29107d@gmail.com>"]
readme = "README.md"
packages = [{include = "feb_blog_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
pydantic = { version = "^1.9", extras = ["email", "dotenv"] }
pyjwt = "^2.6.0"
psycopg2-binary = "^2.9.5"
aiosql = "^7.2"
alembic = "^1.9.3"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
